--- a/app/pom.xml
+++ b/app/pom.xml
@@ -60,6 +60,13 @@
 			<artifactId>android-snakeyaml</artifactId>
 			<version>1.11-SNAPSHOT</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
